<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorLightGrey">

        <android.support.constraint.Guideline
            android:id="@+id/guideLeftVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideRightVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutImage"
            android:layout_width="360dp"
            android:layout_height="304dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideRightVertical"
            app:layout_constraintStart_toStartOf="@+id/guideLeftVertical"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFoodImages"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_solid_white_rounded_corner"
            app:layout_constraintEnd_toStartOf="@+id/guideRightVertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideLeftVertical"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutImage"
            tools:layout_editor_absoluteY="320dp">

            <TextView
                android:id="@+id/textViewFoodName"
                style="@style/HeadingMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/constraintLayoutDescription" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="Rs. 173"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewShortDescription" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:rating="5"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRateNumber"
                app:layout_constraintStart_toEndOf="@+id/textViewRateNumber"
                app:layout_constraintTop_toTopOf="@+id/textViewRateNumber"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewRateNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="4.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

            <TextView
                android:id="@+id/textViewShortDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/dummy_short"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewFoodName" />

            <TextView
                android:id="@+id/textViewRateCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="(167)"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRateNumber"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toTopOf="@+id/textViewRateNumber"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/delivery"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textViewRateNumber" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/opening_hours"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/textViewDeliveryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Free"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textViewOpenHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="till 11:00 pm"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textViewDeliveryType" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_solid_white_rounded_corner"
            app:layout_constraintEnd_toStartOf="@+id/guideRightVertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideLeftVertical"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutDescription">

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <ImageButton
                android:id="@+id/buttonShare"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_solid_grey"
                android:contentDescription="null"
                android:src="@drawable/ic_share"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonRating"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/circle_solid_grey"
                android:contentDescription="null"
                android:src="@drawable/ic_star_border"
                app:layout_constraintStart_toEndOf="@+id/buttonShare"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/capsule_solid_gradient"
                android:text="@string/order_now"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeMedium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/buttonRating"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toEndOf="@+id/buttonRating"
                app:layout_constraintTop_toTopOf="@+id/buttonRating" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_solid_white_rounded_corner"
            app:layout_constraintEnd_toStartOf="@+id/guideRightVertical"
            app:layout_constraintStart_toStartOf="@+id/guideLeftVertical"
            app:layout_constraintTop_toBottomOf="@+id/constraintAction">

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <TextView
                android:id="@+id/textViewDishDescription"
                style="@style/HeadingMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dish_description"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_large"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textViewDishDescription" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_calorie_meter"
                android:text="Calorie Meter"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_servings"
                android:text="Servings"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_food_type"
                android:text="Veg/Non Veg"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_heart_meter"
                android:text="Best For"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_solid_white_rounded_corner"
            app:layout_constraintEnd_toStartOf="@+id/guideRightVertical"
            app:layout_constraintStart_toStartOf="@+id/guideLeftVertical"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewFeaturedItem"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                style="@style/HeadingMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/featured_items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>